--- a/src/app/pages/movies-details/movies-details.page.html
+++ b/src/app/pages/movies-details/movies-details.page.html
@@ -4,8 +4,41 @@
       ><ion-back-button defaultHref="/movies"></ion-back-button
     ></ion-buttons>
     <ion-title *ngIf="movie$ |async as item">{{item.original_title}}</ion-title>
+    <ion-button id="open-modal" fill="clear" slot="end"
+    ><ion-icon color="primary" name="ellipsis-vertical-outline"></ion-icon>
+    </ion-button>
   </ion-toolbar>
 </ion-header>
+<!-- menu modal -->
+<ion-modal
+  #modal
+  trigger="open-modal"
+  [initialBreakpoint]="0.25"
+  [breakpoints]="[0, 0.25, 0.5, 0.75]"
+>
+  <ng-template>
+    <ion-content>
+      <ion-list>
+        <ion-item button routerLink="/toprated">
+          <ion-icon slot="start" name="happy-outline"></ion-icon>
+          <ion-label> Ranking general</ion-label>
+        </ion-item>
+        <ion-item button routerLink="/ranking">
+          <ion-icon slot="start" name="videocam-outline"></ion-icon>
+          <ion-label> Ranking personal</ion-label>
+        </ion-item>
+        <ion-item button routerLink="/movies">
+          <ion-icon slot="start" name="play-circle-outline"></ion-icon>
+          <ion-label> Peliculas populares</ion-label>
+        </ion-item>
+        <ion-item button routerLink="/nowplaying">
+          <ion-icon slot="start" name="play-circle-outline"></ion-icon>
+          <ion-label> Peliculas en el cine</ion-label>
+        </ion-item>
+      </ion-list>
+    </ion-content>
+  </ng-template>
+</ion-modal>
 
 <ion-content>
   <ion-card *ngIf="movie$ | async as item">
@@ -37,10 +70,25 @@
 
       <ion-item lines="none">
         <ion-icon name="cash-outline" slot="start"></ion-icon>
-        <ion-label>{{item.budget | currency: 'ZAR'}}</ion-label>
+        <ion-label>{{item.budget | currency: 'EUR'}}</ion-label>
       </ion-item>
+      <ion-list lines="full">
+        <ion-item>
+          <ion-label position="stacked">Nota Marc</ion-label>
+          <ion-input type="number" [(ngModel)]="notaMarc"></ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-label position="stacked">Nota Maria</ion-label>
+          <ion-input type="number" [(ngModel)]="notaMaria"></ion-input>
+        </ion-item>
+      </ion-list>
+
+      <ion-button expand="block" (click)="guardarNotas()">Guardar</ion-button>
+
     </ion-card-content>
   </ion-card>
+
+
 </ion-content>
 
 <ion-footer>
