--- a/src/app/pages/movies/movies.page.html
+++ b/src/app/pages/movies/movies.page.html
@@ -1,11 +1,42 @@
 <ion-header color="primary">
   <ion-toolbar>
-    <ion-title>Trending Movies</ion-title>
+    <ion-title>Peliculas populares</ion-title>
     <ion-button id="open-modal" fill="clear" slot="end"
-      ><ion-icon color="primary" name="ellipsis-vertical-outline"></ion-icon
-    ></ion-button>
+      ><ion-icon color="primary" name="ellipsis-vertical-outline"></ion-icon>
+    </ion-button>
   </ion-toolbar>
 </ion-header>
+
+<!-- menu modal -->
+<ion-modal
+  #modal
+  trigger="open-modal"
+  [initialBreakpoint]="0.25"
+  [breakpoints]="[0, 0.25, 0.5, 0.75]"
+>
+  <ng-template>
+    <ion-content>
+      <ion-list>
+        <ion-item button routerLink="/toprated">
+          <ion-icon slot="start" name="happy-outline"></ion-icon>
+          <ion-label> Ranking general</ion-label>
+        </ion-item>
+        <ion-item button routerLink="/ranking">
+          <ion-icon slot="start" name="videocam-outline"></ion-icon>
+          <ion-label> Ranking personal</ion-label>
+        </ion-item>
+        <ion-item button routerLink="/movies">
+          <ion-icon slot="start" name="play-circle-outline"></ion-icon>
+          <ion-label> Peliculas populares</ion-label>
+        </ion-item>
+        <ion-item button routerLink="/nowplaying">
+          <ion-icon slot="start" name="play-circle-outline"></ion-icon>
+          <ion-label> Peliculas en el cine</ion-label>
+        </ion-item>
+      </ion-list>
+    </ion-content>
+  </ng-template>
+</ion-modal>
 
 <ion-content>
   <ion-refresher slot="fixed" (ionRefresh)="handleRefresh($event)">
@@ -42,35 +73,4 @@
   <ion-infinite-scroll (ionInfinite)="onIonInfinite($event)">
     <ion-infinite-scroll-content></ion-infinite-scroll-content>
   </ion-infinite-scroll>
-
-  <!-- menu modal -->
-  <ion-modal
-    #modal
-    trigger="open-modal"
-    [initialBreakpoint]="0.25"
-    [breakpoints]="[0, 0.25, 0.5, 0.75]"
-  >
-    <ng-template>
-      <ion-content>
-        <ion-list>
-          <ion-item button routerLink="/nowplaying">
-            <ion-icon slot="start" name="play-circle-outline"></ion-icon>
-            <ion-label> Now playing in cinema</ion-label>
-          </ion-item>
-          <ion-item button routerLink="/upcoming">
-            <ion-icon slot="start" name="videocam-outline"></ion-icon>
-            <ion-label> Upcoming movies</ion-label>
-          </ion-item>
-          <ion-item button routerLink="/recommendations">
-            <ion-icon slot="start" name="document-text-outline"></ion-icon>
-            <ion-label> Recommendations </ion-label>
-          </ion-item>
-          <ion-item button routerLink="/toprated">
-            <ion-icon slot="start" name="happy-outline"></ion-icon>
-            <ion-label> Top-rated movies</ion-label>
-          </ion-item>
-        </ion-list>
-      </ion-content>
-    </ng-template>
-  </ion-modal>
 </ion-content>
