--- a/src/app/pages/nowplaying/nowplaying.page.html
+++ b/src/app/pages/nowplaying/nowplaying.page.html
@@ -2,8 +2,41 @@
   <ion-toolbar>
     <ion-back-button slot="start" defaultHref="/movies"></ion-back-button>
     <ion-title>Now playing</ion-title>
+    <ion-button id="open-modal" fill="clear" slot="end"
+    ><ion-icon color="primary" name="ellipsis-vertical-outline"></ion-icon>
+    </ion-button>
   </ion-toolbar>
 </ion-header>
+<!-- menu modal -->
+<ion-modal
+  #modal
+  trigger="open-modal"
+  [initialBreakpoint]="0.25"
+  [breakpoints]="[0, 0.25, 0.5, 0.75]"
+>
+  <ng-template>
+    <ion-content>
+      <ion-list>
+        <ion-item button routerLink="/toprated">
+          <ion-icon slot="start" name="happy-outline"></ion-icon>
+          <ion-label> Ranking general</ion-label>
+        </ion-item>
+        <ion-item button routerLink="/ranking">
+          <ion-icon slot="start" name="videocam-outline"></ion-icon>
+          <ion-label> Ranking personal</ion-label>
+        </ion-item>
+        <ion-item button routerLink="/movies">
+          <ion-icon slot="start" name="play-circle-outline"></ion-icon>
+          <ion-label> Peliculas populares</ion-label>
+        </ion-item>
+        <ion-item button routerLink="/nowplaying">
+          <ion-icon slot="start" name="play-circle-outline"></ion-icon>
+          <ion-label> Peliculas en el cine</ion-label>
+        </ion-item>
+      </ion-list>
+    </ion-content>
+  </ng-template>
+</ion-modal>
 
 <ion-content>
   <ion-refresher slot="fixed" (ionRefresh)="handleRefresh($event)">
@@ -44,4 +77,5 @@
   <ion-infinite-scroll (ionInfinite)="onIonInfinite($event)">
     <ion-infinite-scroll-content></ion-infinite-scroll-content>
   </ion-infinite-scroll>
+
 </ion-content>
