--- a/src/app/pages/movies/movies.page.html
+++ b/src/app/pages/movies/movies.page.html
@@ -65,6 +65,12 @@
         <p>{{item.release_date | date: 'yyyy/MM/dd'}}</p>
       </ion-label>
 
+      <ion-buttons slot="end">
+        <ion-button (click)="agregarPelicula(item)">
+          <ion-icon name="add"></ion-icon>
+        </ion-button>
+      </ion-buttons>
+
       <ion-badge slot="end">{{item.vote_average}}</ion-badge>
     </ion-item>
   </ion-list>
