--- a/src/app/pages/nowplaying/nowplaying.page.html
+++ b/src/app/pages/nowplaying/nowplaying.page.html
@@ -70,6 +70,7 @@
         slot="end"
         ><ion-icon name="play-outline"></ion-icon
       ></ion-button>
+      <ion-badge slot="end">{{item.vote_average}}</ion-badge>
     </ion-item>
   </ion-list>
 
